# FALCON-Phase

./: .gitignore  .travis.yml  LICENSE.txt  README.md
pipeline/: cluster.config.sge.json  config.json  config.sh  run.sh  snakefile
src/: .gitignore  Makefile  bam_filt.c  bam_filt.h  count_motif.c  count_motif.h  dna.c  dna.h  falcon-phase.c  main.c  matrix.c  matrix.h  meson.build  meson.sh  run_phasing.c  run_phasing.h  string_parser.c  string_parser.h
test_data/: S3HiC_R2.fastq  cns_h_ctg.fasta
tests/: test_asm_preprocess.py
tests/collateral/: combined.fasta  h_tigs_test.fasta  p_tigs_test.fasta
validation/: README.md
validation/scripts/: process_vcf.pl  summarize_results.pl
